--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prettier": "^1.17.0"
   },
   "dependencies": {
+    "asn1": "^0.2.4",
     "asn1.js": ">= 0.4.0",
     "bn.js": ">= 0.14",
     "buffer": ">= 3.0",
