--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "asn1": "^0.2.4",
     "asn1.js": ">= 0.4.0",
+    "axios": "^0.21.1",
     "bn.js": ">= 0.14",
     "buffer": ">= 3.0",
     "jksreader": "^1.0.0",
